css/styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Helvetica", sans-serif;
}

body {
    background-color:  #F0EEDD;
    padding-top: 100px;
}

#pageWrap{
    background-color:  #F0EEDD;
}

header {
    background-color: #8ecea5;
    color: #FFFFFF;
    height: 100px;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 30px 0 20px;
    position: fixed;
    top: 0;
}

h1 {
    font-size: 2.5em;
}

ul {
    width: 420px;
    display: flex;
    justify-content: space-between;
}

nav ul {
    display: flex;
    flex-direction: row;
}

nav ul li {
    font-size: 22px;
    list-style-type: none;
    text-align: center;
    color: #FFFFFF;
    display: flex;
    justify-content: center;
    align-items: center;
}

a {
    text-decoration: none;
    color: #FFFFFF;
}

.buttonStyle {
    background-color: #f4a126;
    height: 60px;
    width: 170px;
    border: 4px solid #FFFFFF;
    border-radius: 3px;
}

#mainContent {
    padding: 100px 170px 50px 170px;
}

section {
    color: #76AB89;
    display: flex;
    justify-content: center;
    flex-direction: column;
}

p {
    margin-bottom: 30px;
}

h2 {
    font-size: 3em;
    text-align: center;
}

figure {
    height: 200px;
    width: 200px;
}

img {
    height: 180px;
    width: 180px;
}
aside {

}

footer {

}

h1 {

}

ul {

}

li {
}

form{
 width:590px;
 margin-left: 300px;
 position: fixed;
 top: 200px;
 background-color: #8ecea5;
 padding: 20px;
 box-shadow: 5px 5px 10px #898989;
 line-height: 24px;
 border-radius: 15px;
}

#formWrapper{
    background-color: white;
    border-radius: 15px;
    padding: 20px;
}

#inputName{  font-size: 100%;
  background-color: #f2f2f2;
  display:inline-block;
  height: 36px;
  border: 1px solid #bdbdbd;
  border-radius: 5px;
  display:inline-block;
  float: right;
  margin-right:20px;
}

#questionTxt{
}

#qPhobiaType p{
    display: inline-block;
    padding-right: 15px;
}
.tfQuestions p{
    display:inline-block;;
    padding-right: 35px;
}

#formHeader{
    text-align: center;
    margin: -20px -20px 0px -20px;
    padding: 45px 15px 10px 15px;
    color:gray;
    }

#qPhobiaType{
    display: inline-block;
}
#submitForm{

}




/** {
    border: 1px dashed red;
}*/

